[tool.poetry]
name = "dagon"
version = "0.10.1"
description = "An asynchronous task graph execution system"
authors = ["vector-of-bool <vectorofbool@gmail.com>"]
packages = [
    { include = "dagon" },
]
readme = "README.md"
repository = "https://github.com/vector-of-bool/dagon"

[tool.poetry.dependencies]
python = "^3.7"
typing-extensions = "^4.4.0"
importlib-metadata = { "version" = "*", python = "<3.10" }
aiohttp = { "version" = "^3.8.3", optional = true }

[tool.poetry.scripts]
dagon = "dagon.tool.main:start"
dagon-inspect = "dagon.inspect.main:start"

[tool.poetry.extras]
http = ["aiohttp"]

[tool.poetry.dev-dependencies]
yapf = "^0.31.0"
pyright = "^0.0.13"
pylint = "^2.12.2"
pytest = "^7.2.0"
tox = "^3.24.4"
Sphinx = "^4.3.1"
sphinx-autodoc-typehints = "^1.12.0"
pytest-asyncio = "^0.16.0"
pytest-xdist = "^2.5.0"
litecli = "^1.6.0"
graphviz = "^0.19.1"
sphinx-autobuild = "^2021.3.14"

[tool.pyright]
include = ["dagon/"]
exclude = ["dagon/inspect/graph.py"]
strict = ["**"]
typeshed-path = "typings"
pythonversion = "3.7"

[tool.poetry.plugins."dagon.extensions"]
"dagon.events" = "dagon.event:_EventsExt"
"dagon.options" = "dagon.option:_OptionsExt"
"dagon.pools" = "dagon.pool:_PoolsExt"
"dagon.db" = "dagon.db:_DatabaseExt"
"dagon.persist" = "dagon.persist:_PersistExt"
"dagon.ui" = "dagon.ui:_Ext"
"dagon.http" = "dagon.http:_Ext"
"dagon.cache" = "dagon.cache:_Ext"
"dagon.storage" = "dagon.storage:_Ext"

[tool.poetry.plugins."dagon.uis"]
"dagon.ui.simple" = "dagon.ui.simple:SimpleUI"
"dagon.ui.fancy" = "dagon.ui.fancy:FancyUI"

[tool.pytest.ini_options]
filterwarnings = [
    # "error"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
